feat: add clip update
