# domain/entities/cron.go
@@ -3,6 +3,7 @@ package entities
 import (
 	"fmt"
 	"strings"
+	"time"
 )
 
 // CronType represents a cron job type.
@@ -30,4 +31,22 @@ func ParseCronType(s string) (CronType, error) {
 	default:
 		return "", fmt.Errorf("invalid CronType: %s", s)
 	}
+}
+
+func GetStartTime(cronType CronType) (string, error) {
+	now := time.Now()
+	startOfToday := time.Date(now.Year(), now.Month(), now.Day(), 0, 0, 0, 0, now.Location())
+	var startTime time.Time
+	switch cronType {
+	case Daily:
+		startTime = startOfToday
+	case Weekly:
+		startTime = startOfToday.AddDate(0, 0, -7)
+	case Monthly:
+		startTime = startOfToday.AddDate(0, -1, 0)
+	default:
+		return "", fmt.Errorf("Unsupported CronType: %s", cronType)
+	}
+
+	return startTime.Format(time.RFC3339), nil
 }
